<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_organizer_draw"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/text_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        header-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_back_24dp_000000_fill0_wght400_grad0_opsz24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_dice_24dp_000000_fill0_wght400_grad0_opsz24"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="Lottery"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_headline"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    descrition card-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeWidth="0dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_event_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Morning Yoga Session"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_event_capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="Capacity: 200"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_size_body_small" />

                <TextView
                    android:id="@+id/tv_registration_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time: Mar 25,2024  14:00  -  Oct 25,2024  14:00"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/text_size_body_small" />


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <!--    waiting list card-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWaitingList"
            android:layout_width="360dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:strokeWidth="0dp"
            tools:ignore="MissingConstraints">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Waiting List"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:paddingHorizontal="12dp">

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/tv_event_waiting_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="400"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_headline"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="in Pool"
                            android:textColor="@color/text_secondary"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout2">

                        <TextView
                            android:id="@+id/tv_event_accepted_ratio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="148/200"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_headline"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Accepted"
                            android:textColor="@color/text_secondary"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/tv_event_spots_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="52"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_headline"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Spots available"
                            android:textColor="@color/text_secondary"
                            android:textStyle="bold" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <!--    numbers to draw -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Number of entrants to draw"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_number_to_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_radius"
                android:drawableStart="@drawable/ic_groups_24dp_000000_fill0_wght400_grad0_opsz24"
                android:drawablePadding="8dp"
                android:hint="Enter the number..."
                android:inputType="number"
                android:paddingVertical="16dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_max_entrants_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Maximum 52 entrants spots available"
                android:textColor="@color/text_tertiary"
                android:textSize="@dimen/text_size_body_small"
                android:textStyle="bold" />

        </LinearLayout>


        <!--    draw button-->
        <TextView
            android:id="@+id/btn_draw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_sm"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="Draw"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_subtitle"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
